2013-01-30  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredAnnotations.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredClasses.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredConstructor.java:
	Three new tests added for a class ArrayIndexOutOfBoundsException.

2013-01-29  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getConstructor.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getConstructor.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getConstructors.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredConstructors.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredFields.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredMethods.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getFields.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getMethods.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isAssignableFrom.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isEnum.java:
	Added new test getConstructor and updated recent ones.

2013-01-28  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/InstanceOf.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isInstance.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isInterface.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isLocalClass.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isMemberClass.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isPrimitive.java: