@@ -1,3 +1,12 @@
+2013-01-31  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredField.java:
+	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredMethod.java:
+	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaringClass.java:
+	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getEnclosingClass.java:
+	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getEnclosingConstructor.java:
+	Five new tests added for a class ArrayIndexOutOfBoundsException.
+
 2013-01-30  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredAnnotations.java:
